--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 		<h2> Welcome to my teaching portfolio! I'm Jason, a fourth year Computer Science major at UC San Diego.</h2>
 		<img class="PersonalImg" src="./images/JasonCabrera.jpg" alt="Cool Image" />
 
-		<h2 class="InPage-Title"> Week 8 Recording </h2>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/G9OIdCSgcVI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<h2 class="InPage-Title"> Week 9 Recording </h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/XCBVc2Bf6ro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<h2 class="InPage-Title"> Recordings </h2>
 		<div class="horizontal">	
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/PvF95rWlHRs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/19jXttVH-ig" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/G9OIdCSgcVI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/G9OIdCSgcVI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/XCBVc2Bf6ro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 	</body>
 </html>
